compiler/tests/success/risc-v/neg.jazz
export
fn neg(reg u32 x) -> reg u32 {
  x = x;
  x = -x;
  return x;
}
