compiler/tests/fail/asmgen/x86-64/uninit_flag.jazz
export
fn asmgen_ice_20220828()
   -> reg u8 {
   reg bool unitialized;
   reg u8 byte;
   byte = #SETcc(unitialized);
   return byte;

}
